# 3dna

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  setup.py
src/3dna/assets/models/: scorpion_low_res.glb  simple_capsule_basic.glb  simple_cube_in_obj_fbx_format.glb
src/threedna/: geodesic_curve.py  paths.py  surface_projection.py
src/threedna/_bindings/: README.md  __init__.py  _geodesic_cpp.pyi  _surface_kernels_cpp.pyi
src/threedna/cpp/: CMakeLists.txt  geodesic_bindings.cpp  surface_kernels.cpp  test_geodesic.cpp
src/threedna/init_curve/: curve_parametrization.py  initialize_ring.py
src/threedna/mesh_io/: model_loader.py  watertight_helper.py
src/threedna/optimizer/: implicit_medial_axis.py  medial_axis_energy.py  run_optimization_loop.py
src/threedna/viz/: visualize_curve_on_surface.py
tests/: test_geodesic_curve.py  test_surface_projection.py
tests/init_curve/: test_curve_parametrization.py  test_initialize_ring.py
tests/mesh_io/: test_3d_model_loader.py
tests/optimizer/: test_implicit_medial_axis.py  test_medial_axis_energy.py
tests/viz/: test_visualize_curve_on_surface.py
