[project]
name = "threedna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "jax>=0.9.1",
    "jaxtyping>=0.3.9",
    "numpy>=2.4.2",
    "open3d>=0.19.0",
    "trimesh>=4.11.2",
]

[project.scripts]
threedna-watertight = "threedna.mesh_io.watertight_helper:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
